codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__realtime_requests__voice_replay_reconciles_matching_captions.snap
---
source: tui/src/app/tests/realtime_requests.rs
assertion_line: 716
expression: "normalize_voice_snapshot_directory(&rendered, &app.config.cwd)"
---

  >_ UkisAI Code (v0.0.0)
     /tmp/project

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /permissions - choose what Codex is allowed to do
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues

› show <code> & tests

• spoken answer

› typed words


› show <code> & tests


› typed words

• different caption
